--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
     <h1>Hello, There!</h1>
-    <h1>This is Fazle Rabbi Fahad</h1>
+    <h1>This is <span class="orange-color">Fazle Rabbi Fahad</span></h1>
+    <h3>Student of Computer Science and Engineering</h3>
+    <p> I am doing BSc in CSE at American International University, Bangladesh. I am learning and mastering web development.</p>
+    <img src="images/my-bg(1).png" alt="">
     
 </body>
 </html>
