--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,25 @@
     <title>Fazle Rabbi Fahad</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Hello, There!</h1>
-    <h1>This is <span class="orange-color">Fazle Rabbi Fahad</span></h1>
-    <h3>Student of Computer Science and Engineering</h3>
-    <p> I am doing BSc in CSE at American International University, Bangladesh. I am learning and mastering web development.</p>
-    <img src="images/my-bg(1).png" alt="">
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Hello, There!</h1>
+            <h1>This is <span class="orange-color">Fazle Rabbi Fahad</span></h1>
+            <h3>Student of Computer Science and Engineering</h3>
+            <p> I am doing BSc in CSE at American International University, Bangladesh. I am learning and mastering web
+                development.
+            </p>
+            <a class="link-text" target="_blank" href="https://www.linkedin.com/in/fazle-rabbi-fahad/">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/my-bg(1).png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
