--- a/index.html
+++ b/index.html
@@ -18,13 +18,31 @@
             <h1>Hello, There!</h1>
             <h1>This is <span class="orange-color">Fazle Rabbi Fahad</span></h1>
             <h3>Student of Computer Science and Engineering</h3>
-            <p> I am doing BSc in CSE at American International University, Bangladesh. I am learning and mastering web
+            <p class="para"> I am doing BSc in CSE at American International University, Bangladesh. I am learning and
+                mastering web
                 development.
             </p>
             <a class="link-text" target="_blank" href="https://www.linkedin.com/in/fazle-rabbi-fahad/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/my-bg(1).png" alt="">
+        </div>
+    </section>
+
+
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/my-bg2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <P class="para">I already learned the basic HTML and CSS. I can build any simple website. My goal is to
+                build 3 websites
+                and learn advanced topics.</P>
+            <a class="link-text" target="_blank" href="https://www.linkedin.com/in/fazle-rabbi-fahad/">DOWNLOAD
+                RESUME</a>
         </div>
     </section>
 </body>
